# AI_Chat

./: pyproject.toml
app/: chain.py  ingest.py  server.py
app/afereon/: Artimenia.md  Calendar.md  History of Afereon.md  Mideecia.md  Religion.md  Taudaumain.md
app/chroma_db/: chroma.sqlite3
